<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_historic"
        android:orderInCategory="100"
        android:title="@string/menuHistoric"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_graph"
        android:orderInCategory="100"
        android:title="@string/menuGraph"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_config"
        android:orderInCategory="100"
        android:title="@string/menuConfig"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_user"
        android:orderInCategory="100"
        android:title="@string/menuUser"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/menuLogout"
        app:showAsAction="never"/>
</menu>