<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/loginLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo"
                android:tint="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/registerTitle"
                android:textAlignment="center"
                android:textSize="26sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextRegisterUsername_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextRegisterUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/registerEditTextUsername"
                    android:inputType="text"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextRegisterEmail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextRegisterEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/registerEditTextEmail"
                    android:inputType="text"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextRegisterPassword_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextRegisterPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/registerEditTextPassword"
                    android:inputType="textPassword"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextRegisterRetypePassword_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextRegisterRetypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/registerEditTextRetypePassword"
                    android:inputType="textPassword"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextRegisterPhone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextRegisterPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/registerEditTextPhone"
                    android:inputType="text"
                    android:textSize="18sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/registerButtonRegister"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/buttonCancelRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/registerButtonBackLogin"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>