<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.UserActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentLeft="true"
        android:layout_margin="8dp"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:id="@+id/userScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/userTitle"
                android:textAlignment="center"
                android:textSize="26sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextUserId_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextUserId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/userEditTextId"
                    android:inputType="text"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextUsername_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/userEditTextUsername"
                    android:inputType="text"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextUserEmail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/userEditTextEmail"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextUserPassword_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/userEditTextPassword"
                    android:inputType="textPassword"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextUserPhone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextUserPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/registerEditTextPhone"
                    android:inputType="text"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonUserEditAccountInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/userButtonSave"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>