<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.ConfigActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentLeft="true"
        android:layout_margin="8dp"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:id="@+id/userScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/configTitle"
                android:textAlignment="center"
                android:textSize="26sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextSettingMaxTempLimit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextSettingMaxTempLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/configTextViewMaxTempLimit"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextSettingMinTempLimit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextSettingMinTempLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/configTextViewMinTempLimit"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextSettingMaxHumLimit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextSettingMaxHumLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/configTextViewMaxHumLimit"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextSettingMinHumLimit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextSettingMinHumLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/configTextViewMinHumLimit"
                    android:inputType="numberDecimal"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextSettingReadingRange_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextSettingReadingRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="35dp"
                    android:hint="@string/configTextViewReadingRange"
                    android:inputType="number"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonSettingEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/configButtonSaveSettings"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>